Update routes and update test name
