# api/kompiles/KompileController.js
@@ -9,8 +9,8 @@ router.get('/', function(req, res, next) {
     .catch(err => res.status(err.status).send(err));
 });
 
-router.get('/average', function(req, res, next) {
-  kompileService.calculateKompileTimeAverageByEmailAndProject(req.query.user, req.query.project)
+router.get('/average/summary', function(req, res, next) {
+  kompileService.calculateKompileTimeAverageSummaryByEmailAndProject(req.query.user, req.query.project)
     .then(average => res.send(average))
     .catch(err => res.status(err.status).send(err));
 });
